--- a/client/package.json
+++ b/client/package.json
@@ -10,8 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^6.3.0",
+    "@mui/x-date-pickers": "^7.23.3",
     "@react-leaflet/core": "^3.0.0",
     "axios": "^1.7.9",
+    "dayjs": "^1.11.13",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.1.0",
     "react": "^19.0.0",
@@ -20,7 +25,8 @@
     "react-icon": "^1.0.0",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
-    "react-router-dom": "^7.1.0"
+    "react-router-dom": "^7.1.0",
+    "react-toastify": "^11.0.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
