--- a/client/package.json
+++ b/client/package.json
@@ -17,6 +17,7 @@
     "@react-leaflet/core": "^3.0.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.1.0",
     "react": "^19.0.0",
