google auth update

--- a/server/.env
+++ b/server/.env
@@ -2,6 +2,12 @@ JWT_SECRET=we_are_gonna_get_cooked
 
 SESSION_SECRET = we_will_be_cooked
 
+NODE_ENV=development
+
+CLIENT_URL=http://localhost:5173
+
+SERVER_URL=http://localhost:5000
+
 MONGO_URI=mongodb+srv://heyjaisal:PsnAUxgvoxCypQ7n@travelers-app.rus0p.mongodb.net/travelers-app?retryWrites=true&w=majority&appName=Travelers-app
 
 PORT=5000
