--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@mui/material": "^6.3.0",
     "@mui/x-date-pickers": "^7.23.3",
     "@react-leaflet/core": "^3.0.0",
+    "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
     "js-cookie": "^3.0.5",
@@ -26,8 +27,11 @@
     "react-dropzone": "^14.3.5",
     "react-icons": "^5.4.0",
     "react-leaflet": "^5.0.0",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "redux": "^5.0.1",
+    "redux-persist": "^6.0.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
