--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     "@reduxjs/toolkit": "^2.5.0",
     "axios": "^1.7.9",
     "dayjs": "^1.11.13",
+    "dotenv": "^16.4.7",
     "js-cookie": "^3.0.5",
     "leaflet": "^1.9.4",
     "leaflet-control-geocoder": "^3.1.0",
