--- a/client/package.json
+++ b/client/package.json
@@ -30,6 +30,7 @@
     "react-leaflet": "^5.0.0",
     "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.0",
+    "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0"
