--- a/client/package.json
+++ b/client/package.json
@@ -33,7 +33,8 @@
     "react-spinners": "^0.15.0",
     "react-toastify": "^11.0.2",
     "redux": "^5.0.1",
-    "redux-persist": "^6.0.0"
+    "redux-persist": "^6.0.0",
+    "socket.io-client": "^4.8.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.17.0",
