--- a/server/package.json
+++ b/server/package.json
@@ -12,6 +12,7 @@
     "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.16",
     "passport": "^0.7.0",
-    "passport-google-oauth20": "^2.0.0"
+    "passport-google-oauth20": "^2.0.0",
+    "socket.io": "^4.8.1"
   }
 }
