--- a/server/.env
+++ b/server/.env
@@ -19,7 +19,8 @@ EMAIL_PASS='xxaz bett zbgx dtoj'
 GOOGLE_CLIENT_ID= 1070441540702-j9uveh64bn10j831bkff9pplvtpl7tg2.apps.googleusercontent.com
 GOOGLE_CLIENT_SECRET= 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
 
-JWT_EXPIRATION_TIME=24h
+JWT_EXPIRATION_TIME=150d
+
 
 AWS_ACCESS_KEY_ID=your-access-key-id
 AWS_SECRET_ACCESS_KEY=your-secret-access-key
