--- a/client/.gitignore
+++ b/client/.gitignore
@@ -6,11 +6,12 @@ yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
-node_modules
 
+node_modules
 dist
 dist-ssr
 *.local
+.env
 
 # Editor directories and files
 .vscode/*
@@ -22,4 +23,9 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-.env
+
+
+pnpm-lock.yaml
+yarn.lock
+package-lock.json
+bun.lockb
