--- a/client/package.json
+++ b/client/package.json
@@ -1,72 +1,98 @@
 {
-  "name": "client",
+  "name": "vite-template",
   "private": true,
   "version": "0.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
-    "lint": "eslint .",
+    "build": "tsc && vite build",
+    "lint": "eslint -c .eslintrc.json ./src/**/**/*.{ts,tsx} --fix",
     "preview": "vite preview"
   },
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/material": "^6.3.0",
-    "@mui/x-date-pickers": "^7.23.3",
-    "@radix-ui/react-avatar": "^1.1.2",
-    "@radix-ui/react-dialog": "^1.1.5",
+    "@heroui/button": "2.2.13",
+    "@heroui/code": "2.2.10",
+    "@heroui/dropdown": "2.3.13",
+    "@heroui/input": "2.4.13",
+    "@heroui/kbd": "2.2.10",
+    "@heroui/link": "2.2.11",
+    "@heroui/navbar": "2.2.12",
+    "@heroui/snippet": "2.2.14",
+    "@heroui/switch": "2.2.12",
+    "@heroui/system": "2.4.10",
+    "@heroui/theme": "2.4.9",
+    "@heroui/use-theme": "2.1.5",
+    "@mui/material": "^6.4.5",
+    "@mui/x-date-pickers": "^7.27.0",
+    "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-dialog": "^1.1.6",
     "@radix-ui/react-label": "^2.1.2",
-    "@radix-ui/react-scroll-area": "^1.2.2",
+    "@radix-ui/react-scroll-area": "^1.2.3",
+    "@radix-ui/react-select": "^2.1.6",
     "@radix-ui/react-slot": "^1.1.2",
-    "@radix-ui/react-tooltip": "^1.1.7",
-    "@reduxjs/toolkit": "^2.5.0",
+    "@radix-ui/react-tooltip": "^1.1.8",
+    "@react-aria/visually-hidden": "3.8.19",
+    "@react-types/shared": "3.27.0",
+    "@reduxjs/toolkit": "^2.6.0",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
-    "cmdk": "^1.0.0",
+    "cmdk": "^1.0.4",
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.0",
-    "framer-motion": "^12.0.6",
+    "framer-motion": "^11.15.0",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
-    "lucide-react": "^0.474.0",
+    "lucide-react": "^0.475.0",
     "moment": "^2.30.1",
     "passport-google-oauth20": "^2.0.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
-    "react-dropzone": "^14.3.5",
-    "react-icons": "^5.4.0",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
+    "react-dropzone": "^14.3.8",
+    "react-icons": "^5.5.0",
     "react-leaflet": "^4.0.0",
     "react-loader-spinner": "^6.1.6",
     "react-lottie": "^1.2.10",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^7.1.0",
+    "react-router-dom": "6.23.0",
+    "react-slick": "^0.30.3",
     "react-spinners": "^0.15.0",
-    "react-toastify": "^11.0.2",
+    "react-toastify": "^11.0.5",
     "recharts": "^2.15.1",
     "redux": "^5.0.1",
     "redux-persist": "^6.0.0",
+    "slick-carousel": "^1.8.1",
     "socket.io-client": "^4.8.1",
-    "sonner": "^1.7.3",
-    "tailwind-merge": "^2.6.0",
+    "sonner": "^2.0.1",
+    "tailwind-merge": "^3.0.2",
+    "tailwind-variants": "0.3.0",
+    "tailwindcss": "3.4.16",
     "tailwindcss-animate": "^1.0.7"
   },
   "devDependencies": {
-    "@eslint/js": "^9.17.0",
-    "@types/node": "^22.12.0",
-    "@types/react": "^18.3.17",
-    "@types/react-dom": "^18.3.5",
-    "@vitejs/plugin-react": "^4.3.4",
-    "autoprefixer": "^10.4.20",
-    "eslint": "^9.17.0",
-    "eslint-plugin-react": "^7.37.2",
-    "eslint-plugin-react-hooks": "^5.0.0",
-    "eslint-plugin-react-refresh": "^0.4.16",
-    "globals": "^15.13.0",
-    "postcss": "^8.4.49",
-    "tailwindcss": "^3.4.17",
-    "vite": "^6.0.3"
+    "@types/node": "20.5.7",
+    "@types/react": "18.3.3",
+    "@types/react-dom": "18.3.0",
+    "@typescript-eslint/eslint-plugin": "8.11.0",
+    "@typescript-eslint/parser": "8.11.0",
+    "@vitejs/plugin-react": "^4.2.1",
+    "autoprefixer": "10.4.19",
+    "eslint": "^8.57.0",
+    "eslint-config-prettier": "9.1.0",
+    "eslint-plugin-import": "^2.26.0",
+    "eslint-plugin-jsx-a11y": "^6.4.1",
+    "eslint-plugin-node": "^11.1.0",
+    "eslint-plugin-prettier": "5.2.1",
+    "eslint-plugin-react": "^7.23.2",
+    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-unused-imports": "4.1.4",
+    "postcss": "8.4.38",
+    "prettier": "3.3.3",
+    "typescript": "5.6.3",
+    "vite": "^5.2.0",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
