--- a/client/package.json
+++ b/client/package.json
@@ -19,15 +19,18 @@
     "@heroui/kbd": "2.2.10",
     "@heroui/link": "2.2.11",
     "@heroui/navbar": "2.2.12",
+    "@heroui/select": "^2.4.17",
     "@heroui/snippet": "2.2.14",
     "@heroui/switch": "2.2.12",
     "@heroui/system": "2.4.10",
-    "@heroui/theme": "2.4.9",
+    "@heroui/theme": "^2.4.13",
     "@heroui/use-theme": "2.1.5",
     "@mui/material": "^6.4.5",
     "@mui/x-date-pickers": "^7.27.0",
     "@radix-ui/react-avatar": "^1.1.3",
+    "@radix-ui/react-checkbox": "^1.1.5",
     "@radix-ui/react-dialog": "^1.1.6",
+    "@radix-ui/react-dropdown-menu": "^2.1.6",
     "@radix-ui/react-label": "^2.1.2",
     "@radix-ui/react-scroll-area": "^1.2.3",
     "@radix-ui/react-select": "^2.1.6",
@@ -36,6 +39,8 @@
     "@react-aria/visually-hidden": "3.8.19",
     "@react-types/shared": "3.27.0",
     "@reduxjs/toolkit": "^2.6.0",
+    "@tanstack/react-table": "^8.21.2",
+    "@yudiel/react-qr-scanner": "^2.2.1",
     "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -43,7 +48,7 @@
     "dayjs": "^1.11.13",
     "dotenv": "^16.4.7",
     "emoji-picker-react": "^4.12.0",
-    "framer-motion": "^11.15.0",
+    "framer-motion": "^12.6.5",
     "input-otp": "^1.4.2",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.475.0",
@@ -53,6 +58,7 @@
     "react-dom": "18.3.1",
     "react-dropzone": "^14.3.8",
     "react-icons": "^5.5.0",
+    "react-infinite-scroll-component": "^6.1.0",
     "react-leaflet": "^4.0.0",
     "react-loader-spinner": "^6.1.6",
     "react-lottie": "^1.2.10",
@@ -92,7 +98,7 @@
     "postcss": "8.4.38",
     "prettier": "3.3.3",
     "typescript": "5.6.3",
-    "vite": "^5.2.0",
+    "vite": "^6.2.4",
     "vite-tsconfig-paths": "^4.3.2"
   }
 }
