--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "socket.io": "^4.8.1",
+    "stripe": "^17.7.0",
     "uuid": "^11.0.5"
   }
 }
