--- a/client/package.json
+++ b/client/package.json
@@ -62,6 +62,7 @@
     "react-leaflet": "^4.0.0",
     "react-loader-spinner": "^6.1.6",
     "react-lottie": "^1.2.10",
+    "react-qr-scanner": "^1.0.0-alpha.11",
     "react-redux": "^9.2.0",
     "react-router-dom": "6.23.0",
     "react-slick": "^0.30.3",
