--- a/server/package.json
+++ b/server/package.json
@@ -23,5 +23,9 @@
     "socket.io-client": "^4.8.1",
     "stripe": "^17.7.0",
     "uuid": "^11.0.5"
+  },
+  "scripts": {
+    "start": "node server.js",
+    "dev": "nodemon server.js"
   }
 }
