--- a/server/package.json
+++ b/server/package.json
@@ -25,7 +25,7 @@
     "uuid": "^11.0.5"
   },
   "scripts": {
-    "start": "node server.js",
+    "start": "node index.js",
     "dev": "nodemon server.js"
   }
 }
